--- a/alex.html
+++ b/alex.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="alex.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
   <header>
     <h3>PHAROHS</h3>
+  </header>
+
   </header>
     <section class=" home "> 
     </section>
@@ -104,6 +107,15 @@
     </div>
     </section>
   
-    
+    <footer class="footer">
+            <p class="Copyrights"> &copy; Copyrights 2022 @ <span>PHARAOH</span></p>
+            <div>
+                <a href="https://www.linkedin.com" target="_blank"><i  id="linkedin"class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.facebook.com" target="_blank"><i  id="fb"class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.youtube.com"><i id="yt"class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.twitter.com" ><i id="tweet"class="fa-brands fa-twitter"></i></a>
+            </div>
+        </footer>
+
 </body>
 </html>
